flow factory